[gd_scene load_steps=13 format=3 uid="uid://dbgne0ap5k0jw"]

[ext_resource type="Script" path="res://items/door.gd" id="1_4gk0b"]
[ext_resource type="Material" uid="uid://bxuo2ccujha40" path="res://materials/door_frame.tres" id="1_k6pxr"]
[ext_resource type="Material" uid="uid://cpit50oddoynk" path="res://materials/door.tres" id="3_0bwim"]
[ext_resource type="Texture2D" uid="uid://kenxkscyjyy8" path="res://images/icon_lock.png" id="4_2jucg"]
[ext_resource type="Script" path="res://world/interactive.gd" id="4_fhdp7"]

[sub_resource type="BoxMesh" id="BoxMesh_2xlr1"]
size = Vector3(0.1, 1.2, 0.25)

[sub_resource type="BoxMesh" id="BoxMesh_t7low"]
size = Vector3(0.1, 2.4, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_p53d7"]
size = Vector3(1.82482, 1, 1.07512)

[sub_resource type="BoxMesh" id="BoxMesh_o5fu0"]
size = Vector3(1, 2.35, 0.07)

[sub_resource type="BoxShape3D" id="BoxShape3D_yhacc"]
size = Vector3(1, 2.35, 0.07)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_31bvw"]

[sub_resource type="PlaneMesh" id="PlaneMesh_vsnf4"]
size = Vector2(0.5, 0.2)

[node name="door" type="CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
operation = 2
flip_faces = true
size = Vector3(1.10407, 2.4, 0.3)
script = ExtResource("1_4gk0b")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 3.48787e-16, 1, -4.37114e-08, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 1.2, 2.08165e-12)
material_override = ExtResource("1_k6pxr")
mesh = SubResource("BoxMesh_2xlr1")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 3.48787e-16, 1, -4.37114e-08, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, 2.08165e-12, -1.23841, 2.08165e-12)
material_override = ExtResource("1_k6pxr")
mesh = SubResource("BoxMesh_2xlr1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.55, 0, 2.08165e-12)
material_override = ExtResource("1_k6pxr")
mesh = SubResource("BoxMesh_t7low")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.55, 0, 2.08165e-12)
material_override = ExtResource("1_k6pxr")
mesh = SubResource("BoxMesh_t7low")
skeleton = NodePath("../../..")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.696937, -1.09911)
shape = SubResource("BoxShape3D_p53d7")

[node name="door_body" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.025, 2.08165e-12)

[node name="RigidBody3D" type="StaticBody3D" parent="door_body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 2.08165e-12, 2.08165e-12)
collision_layer = 5
metadata/interactive = "door"

[node name="MeshInstance3D" type="MeshInstance3D" parent="door_body/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0, 2.08165e-12)
material_override = ExtResource("3_0bwim")
mesh = SubResource("BoxMesh_o5fu0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="door_body/RigidBody3D"]
shape = SubResource("BoxShape3D_yhacc")

[node name="lock" type="Sprite3D" parent="door_body/RigidBody3D"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, -0.0372384)
modulate = Color(0.792157, 0, 0, 1)
texture = ExtResource("4_2jucg")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="door_body/RigidBody3D"]
transform = Transform3D(1, -6.97574e-16, -1.5246e-23, -1.5246e-23, -4.37114e-08, 1, -6.97574e-16, -1, -4.37114e-08, 0, 0.621823, -0.0367897)
material_override = SubResource("StandardMaterial3D_31bvw")
cast_shadow = 0
mesh = SubResource("PlaneMesh_vsnf4")

[node name="Label3D" type="Label3D" parent="door_body/RigidBody3D/MeshInstance3D2"]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, 1.99868e-18, 0.0028652, 0)
double_sided = false
modulate = Color(0, 0, 0, 1)
text = "Door"
font_size = 22
outline_size = 0
uppercase = true

[node name="Interactive" type="Node3D" parent="door_body/RigidBody3D"]
script = ExtResource("4_fhdp7")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="on_action" from="door_body/RigidBody3D/Interactive" to="." method="_on_interactive_on_action"]
